# cmake_gtest_template

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  clean.sh  hello.cmake
env/: Dockerfile  Readme.md
src/: hello.h
src/hello/: CMakeLists.txt  hello.cmake  hello.cpp
src/hello/test/: CMakeLists.txt  hello-test.cpp
tests/: CMakeLists.txt  hello-test.cpp
